<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/logo_sign_up"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:transitionName="@string/logo_transition_name"
            android:background="@drawable/lovepik_com_401152186_blue_spot"
            app:srcCompat="@drawable/car_logo" />

        <TextView
            android:id="@+id/welcome_text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/text_transition_name"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/bungee"
            android:text="Welcome"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/description_text_transition"
            android:text="SignUp to start your new Journey"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Full name"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_sign_up_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="User name"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_sign_up_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="15"
                    android:transitionName="@string/user_name_transition" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_codes"
                    style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/code_numbers" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_number_sign_up"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:hint="Phone Number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLength="14" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:transitionName="@string/password_transition"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/go_button_transition"
            android:text="Go"
            android:textColor="#FFFFFF"
            app:backgroundTint="#000000" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/already_have_account_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/login_sign_up_transition"
            android:text="Already have an account? LogIn"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF" />

    </LinearLayout></ScrollView>